[package]
name = "ferrischat_common"
version = "0.1.7"
edition = "2018"
license = "MIT"
description = "Common utilities and types for FerrisChat"
homepage = "https://ferris.chat"
documentation = "https://docs.rs/ferrischat_common"
repository = "https://github.com/FerrisChat/Common"
readme = "README.md"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
