[package]
name = "ferrischat_common"
version = "0.2.0"
authors = ["FerrisChat Team <crates@ferris.chat>"]
edition = "2021"
license = "MIT"
description = "Common utilities and types for FerrisChat"
homepage = "https://ferris.chat"
documentation = "https://docs.rs/ferrischat_common"
repository = "https://github.com/FerrisChat/Common"
readme = "README.md"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bitflags = "1.3"
time = { version = "0.2", features = ["serde"] }
