[package]
name = "macros"
version = "0.1.0"
edition = "2021"
description = "Implements the `CastSnowflakes` derive macro."
authors = ["jay3332"]
license = "MIT"
repository = "https://github.com/FerrisChat/Common"
readme = "../README.md"
keywords = ["macros"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "parsing"] }
quote = "1.0"
